deploy/ollama-serve/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 11434
  selector:
    app: ollama
    deployment: ollama
  type: ClusterIP
